# omnibor-rs

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cbindgen.toml  dist-workspace.toml  oranda-workspace.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml  rust.yml  test.yml
docs/: book.toml
gitbom/: Cargo.toml
gitbom/src/: lib.rs
gitoid/: CHANGELOG.md  Cargo.toml  Makefile  README.md  cbindgen.toml  ctest.sh  gitoid.h
gitoid/benches/: benchmark.rs
gitoid/src/: boring_sha.rs  builder.rs  error.rs  finder.rs  gitoid.rs  gitoid_url_parser.rs  hash.rs  hash_algorithm.rs  hash_ref.rs  internal.rs  lib.rs  named_digest.rs  object_type.rs  source.rs  tests.rs
gitoid/src/backend/: boringssl.rs  mod.rs  openssl.rs  rustcrypto.rs
gitoid/src/ffi/: error.rs  gitoid.rs  make_byte_array.c  mod.rs  status.rs  test.c  util.rs
gitoid/src/util/: for_each_buf_fill.rs  mod.rs  stream_len.rs
gitoid/test/: .gitignore
gitoid/test/c/: test.c
omnibor/: CHANGELOG.md  Cargo.toml  README.md
omnibor-cli/: CHANGELOG.md  Cargo.toml  README.md  oranda.json
omnibor-cli/config/: omnibor.json
omnibor-cli/src/: app.rs  artifact_find.rs  artifact_id.rs  cli.rs  config.rs  debug_config.rs  error.rs  find.rs  fs.rs  id.rs  log.rs  main.rs  manifest_add.rs  manifest_create.rs  manifest_remove.rs  print.rs
omnibor-cli/src/cmd/: mod.rs
omnibor-cli/src/cmd/artifact/: find.rs  id.rs  mod.rs
omnibor-cli/src/cmd/debug/: config.rs  paths.rs
omnibor-cli/src/cmd/id/: create.rs  find.rs  mod.rs
omnibor-cli/src/cmd/manifest/: add.rs  create.rs  find.rs  mod.rs  remove.rs
omnibor-cli/src/cmd/store/: add.rs  get.rs  list.rs  log.rs  mod.rs  remove.rs
omnibor-cli/src/print/: error.rs  find_file.rs  id_file.rs  mod.rs  paths.rs  root_dir.rs
omnibor-cli/src/print/msg/: error.rs  find_file.rs  id_file.rs  manifest_create.rs  manifest_find.rs  mod.rs  store_get.rs  store_list.rs  store_remove.rs
omnibor-cli/tests/: test.rs
omnibor-cli/tests/snapshots/: test__artifact_id_json.snap  test__artifact_id_plain.snap  test__artifact_id_short.snap  test__artifact_no_args.snap  test__debug_no_args.snap  test__manifest_no_args.snap  test__no_args.snap
omnibor/benches/: benchmark.rs
omnibor/new-benches/: benchmark.rs
omnibor/src/: adg.rs  artifact_id.rs  embed.rs  embedding_mode.rs  error.rs  gitoid.rs  hash_algorithm.rs  hash_provider.rs  identifier.rs  input_manifest.rs  input_manifest_builder.rs  into_artifact_id.rs  lib.rs  manifest.rs  object_type.rs  storage.rs  supported_hash.rs  test.rs
omnibor/src/adg/: adg_internal.rs  adg_node.rs
omnibor/src/artifact_id/: artifact_id.rs  artifact_id_builder.rs  identify.rs  identify_async.rs  mod.rs
omnibor/src/embed/: auto_embed.rs  custom_embed_provider.rs  embed_provider.rs  mod.rs
omnibor/src/error/: artifact_id_error.rs  embedding_error.rs  hash_provider_error.rs  input_manifest_error.rs  mod.rs
omnibor/src/ffi/: artifact_id.rs  error.rs  mod.rs  status.rs  util.rs
omnibor/src/gitoid/: gitoid.rs  gitoid_parser.rs  gitoid_url_parser.rs  internal.rs  mod.rs
omnibor/src/hash_provider/: boringssl.rs  mod.rs  openssl.rs  registry.rs  rustcrypto.rs
omnibor/src/input_manifest/: embed.rs  embed_provider.rs  embedding_mode.rs  input_manifest.rs  input_manifest_builder.rs  manifest_source.rs  manifest_source_async.rs  mod.rs
omnibor/src/storage/: build_id.rs  file_system_storage.rs  in_memory_storage.rs  metadata.rs  mod.rs  query.rs  test.rs
omnibor/src/util/: clone_as_boxstr.rs  for_each_buf_fill.rs  mod.rs  pathbuf.rs  stream_len.rs
omnibor/test/data/c/: .gitignore  Makefile  main.c  util.c
src/: lib.rs  main.rs
xtask/: Cargo.toml  README.md
xtask/src/: cli.rs  main.rs  pipeline.rs  release.rs
