[package]
name = "gitbom"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "An experimental implementation of gitbom in Rust"
readme = "README.md"
homepage = "https://gitbom.dev"
repository = "https://github.com/git-bom/gitbom-rs"
keywords = ["gitbom", "sbom"]
categories = ["cryptography", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
sha1 = "0.10.1"
sha2 = "0.10.2"
