[package]
categories = ["cryptography", "development-tools"]
description = "An experimental implementation of gitbom in Rust"
edition = "2021"
homepage = "https://gitbom.dev"
keywords = ["gitbom", "sbom"]
license = "Apache-2.0"
name = "gitbom"
readme = "README.md"
repository = "https://github.com/git-bom/gitbom-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
im = "15"
sha1 = "0.10.1"
sha2 = "0.10.2"
tokio = {version = "1.17", features = ["full"]}
