[package]
categories = ["cryptography", "development-tools"]
description = "An experimental implementation of gitbom in Rust"
edition = "2021"
homepage = "https://gitbom.dev"
keywords = ["gitbom", "sbom"]
license = "Apache-2.0"
name = "gitbom"
readme = "../README.md"
repository = "https://github.com/git-bom/gitbom-rs"
version = "0.1.4"

[dependencies]
gitoid = "0.1.3"
futures = "0.3.24"
hex = "0.4.3"
im = "15.1.0"
pin-project = "1.0.12"
sha1 = "0.10.4"
sha2 = "0.10.5"
tokio = {version = "1.21.0", features = ["io-util", "fs", "rt", "macros"]}

