[package]
categories = ["cryptography", "development-tools"]
description = "An experimental implementation of gitbom in Rust"
edition = "2021"
homepage = "https://gitbom.dev"
keywords = ["gitbom", "sbom"]
license = "Apache-2.0"
name = "gitbom"
readme = "../README.md"
repository = "https://github.com/git-bom/gitbom-rs"
version = "0.1.6"

[dependencies]
gitoid = "0.1.5"
hex = "0.4.3"
im = "15.1.0"
sha1 = "0.10.4"
sha2 = "0.10.5"
