[package]
categories = ["cryptography", "development-tools"]
description = "An experimental implementation of gitoids in Rust"
edition = "2021"
homepage = "https://omnibor.io/"
keywords = ["gitbom", "omnibor", "sbom", "gitoid"]
license = "Apache-2.0"
name = "gitoid"
readme = "../README.md"
repository = "https://github.com/omnibor/omnibor-rs"
version = "0.4.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]

## Core Dependencies

# Match the version used in sha1 and sha2.
digest = "0.10.7"
format-bytes = "0.3.0"
# Match the version used in sha1, sha2, and digest.
generic-array = "0.14.7"

## Hash Algorithms

sha1 = { version = "0.10.6", default-features = false, features = ["std"] }
sha1collisiondetection = "0.3.3"
sha2 = { version = "0.10.8", default-features = false }

## Async Support

tokio = { version = "1.36.0", features = ["io-util"] }

## Representations

hex = { version = "0.4.3", default-features = false, features = ["std"] }
url = "2.4.1"

[dev-dependencies]

# Need "rt" and "fs" additionally for tests.
tokio = { version = "1.36.0", features = ["io-util", "fs", "rt", "rt-multi-thread"] }
