[package]

name = "omnibor-cli"
version = "0.7.0"

description = "CLI for working with OmniBOR Identifiers and Manifests"
repository = "https://github.com/omnibor/omnibor-rs"
readme = "README.md"
categories = ["cryptography", "development-tools"]
keywords = ["gitbom", "omnibor", "sbom"]

edition.workspace = true
license.workspace = true
homepage.workspace = true

# Surprisingly, setting this on the package-specific manifest for
# `omnibor-cli` configures the default-run binary for the entire
# workspace. This... should probably be fixed to be properly set
# on the workspace-root manifest, but for now this works.
default-run = "omnibor"

# Tell Cargo that the binary name should be "omnibor",
# not "omnibor-cli". Otherwise it'll default to the name of the package.
[[bin]]

name = "omnibor"
path = "src/main.rs"

[dependencies]

anyhow = "1.0.80"
async-walkdir = "1.0.0"
clap = { version = "4.5.1", features = ["derive", "env"] }
dirs = "5.0.1"
futures-lite = "2.2.0"
omnibor = { version = "0.6.0", path = "../omnibor" }
pathbuf = "1.0.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml", "filters"] }
insta-cmd = "0.6.0"
