[package]

name = "omnibor-cli"
version = "0.8.0"

description = "CLI for working with OmniBOR Identifiers and Manifests"
repository = "https://github.com/omnibor/omnibor-rs"
readme = "README.md"
categories = ["cryptography", "development-tools"]
keywords = ["gitbom", "omnibor", "sbom"]

edition.workspace = true
license.workspace = true
homepage.workspace = true

# Surprisingly, setting this on the package-specific manifest for
# `omnibor-cli` configures the default-run binary for the entire
# workspace. This... should probably be fixed to be properly set
# on the workspace-root manifest, but for now this works.
default-run = "omnibor"

# Tell Cargo that the binary name should be "omnibor",
# not "omnibor-cli". Otherwise it'll default to the name of the package.
[[bin]]

name = "omnibor"
path = "src/main.rs"

[dependencies]
async-channel = "2.3.1"

async-walkdir = "1.0.0"
clap = { version = "4.5.1", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.2"
console = "0.15.8"
console-subscriber = "0.4.1"
dirs = "5.0.1"
dyn-clone = "1.0.17"
futures-lite = "2.2.0"
futures-util = "0.3.31"
omnibor = { version = "0.9.0", path = "../omnibor" }
pathbuf = "1.0.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "2.0.3"
tokio = { version = "1.36.0", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "tracing",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml", "filters"] }
insta-cmd = "0.6.0"
