[package]

name = "omnibor"
version = "0.6.0"

description = "Reproducible software identity and fine-grained build dependency tracking."
repository = "https://github.com/omnibor/omnibor-rs"
readme = "README.md"
categories = ["cryptography", "development-tools"]
keywords = ["gitbom", "omnibor", "sbom"]

edition.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
crate-type = [
    # Let the Rust compiler choose a "recommended" lib type for use by Rust code.
    "lib",

    # A system-specific static library usable by non-Rust code.
    # This is `*.a` on Linux, macOS, and Windows using the MinGW toolchain.
    # This is `*.lib` on Windows using the MSVC toolchain.
    "staticlib",

    # A system-specific dynamic library usable by non-Rust code.
    # This is a `*.so` file on Linux.
    # This is a `*.dylib` file on macOS.
    # This is a `*.dll` file on Windows.
    "cdylib",
]

[dependencies]

gitoid = { version = "0.8.0", path = "../gitoid", default-features = false, features = [
    "async",
    "hex",
    "backend-rustcrypto",
    "sha256",
    "std",
    "url",
] }
newline-converter = "0.3.0"
pathbuf = "1.0.0"
serde = { version = "1.0.197", optional = true }
thiserror = "1.0.60"
tokio = { version = "1.36.0", features = ["io-util"] }
tracing = "0.1.40"
url = "2.5.0"
walkdir = "2.5.0"

[dev-dependencies]

digest = "0.10.7"
pathbuf = "1.0.0"
serde_test = "1.0.176"
tokio = { version = "1.36.0", features = ["io-util", "fs"] }
tokio-test = "0.4.3"

[features]

# Support serde serialization and deserialization
serde = ["dep:serde", "gitoid/serde"]
