[package]

name = "omnibor"
version = "0.8.0"

description = "Reproducible software identity and fine-grained build dependency tracking."
repository = "https://github.com/omnibor/omnibor-rs"
readme = "README.md"
categories = ["cryptography", "development-tools"]
keywords = ["gitbom", "omnibor", "sbom"]

edition.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
crate-type = [
    # Let the Rust compiler choose a "recommended" lib type for use by Rust code.
    "lib",

    # A system-specific static library usable by non-Rust code.
    # This is `*.a` on Linux, macOS, and Windows using the MinGW toolchain.
    # This is `*.lib` on Windows using the MSVC toolchain.
    "staticlib",

    # A system-specific dynamic library usable by non-Rust code.
    # This is a `*.so` file on Linux.
    # This is a `*.dylib` file on macOS.
    # This is a `*.dll` file on Windows.
    "cdylib",
]

[dependencies]

# NOTE: Must match the version used in the hash crate.
#
# Technically, we could rely on the re-export from one of those crates,
# but since all the hash crates are optional dependencies our usage code
# within the 'gitoid' crate would be more complex to handle the possibility
# for any/all of them to be missing. It's simpler to just specify it here
# so we know we always get the crate.
digest = { version = "0.10.7", features = ["std"] }

# Cryptography Providers.
boring = { version = "4.6.0", optional = true }
openssl = { version = "0.10.66", optional = true }
sha2 = { version = "0.10.8", features = ["std"], optional = true }

# Required crates.
bytecount = { version = "0.6.8", features = ["runtime-dispatch-simd"] }
hex = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "2.0.0"
tokio = { version = "1.36.0", features = ["io-util", "fs"] }
tracing = "0.1.40"
url = "2.4.1"
paste = "1.0.15"
walkdir = { version = "2.5.0" }

[dev-dependencies]

anyhow = "1.0.95"
criterion = { version = "0.5.1" }
# NOTE: Match version in "dependencies"
digest = "0.10.7"
serde_test = "1.0.176"
# Need "rt" and "fs" additionally for tests.
tokio = { version = "1.36.0", features = [
    "io-util",
    "fs",
    "rt",
    "rt-multi-thread",
] }
tokio-test = "0.4.3"

[features]

# By default, you get:
#
# - Async support.
# - The 'rustcrypto' backend.
# - Standard library support.
default = ["backend-rustcrypto"]

# Enable using RustCrypto as a cryptography backend.
backend-rustcrypto = ["dep:sha2"]

# Enable using BoringSLL as a cryptography backend.
backend-boringssl = ["dep:boring"]

# Enable using OpenSSL as a cryptography backend.
backend-openssl = ["dep:openssl"]

[[bench]]
name = "benchmark"
harness = false
