[package]

name = "omnibor"
version = "0.10.0"

description = "Reproducible software identity and fine-grained build dependency tracking."
repository = "https://github.com/omnibor/omnibor-rs"
readme = "README.md"
categories = ["cryptography", "development-tools"]
keywords = ["gitbom", "omnibor", "sbom"]

edition.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
crate-type = [
    # Let the Rust compiler choose a "recommended" lib type for use by Rust code.
    "lib",

    # A system-specific static library usable by non-Rust code.
    # This is `*.a` on Linux, macOS, and Windows using the MinGW toolchain.
    # This is `*.lib` on Windows using the MSVC toolchain.
    "staticlib",

    # A system-specific dynamic library usable by non-Rust code.
    # This is a `*.so` file on Linux.
    # This is a `*.dylib` file on macOS.
    # This is a `*.dll` file on Windows.
    "cdylib",
]

[dependencies]

# NOTE: Must match the version used in the hash crate.
#
# Technically, we could rely on the re-export from one of those crates,
# but since all the hash crates are optional dependencies our usage code
# within the 'gitoid' crate would be more complex to handle the possibility
# for any/all of them to be missing. It's simpler to just specify it here
# so we know we always get the crate.
digest = { version = "0.10.7", features = ["std"] }

# Cryptography Providers.
boring = { version = "4.6.0", optional = true }
openssl = { version = "0.10.66", optional = true }
sha2 = { version = "0.10.8", features = ["std"], optional = true }

# Required crates.
bytecount = { version = "0.6.8", features = ["runtime-dispatch-simd"] }
hex = "0.4.3"
indexmap = "2.10.0"
petgraph = "0.8.2"
tokio = { version = "1.36.0", features = ["io-util", "fs", "sync"] }
tracing = "0.1.41"
walkdir = "2.5.0"

# Other optional crates.
bindet = { version = "0.3.2", optional = true }
hyperpolyglot = { version = "0.1.7", optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
trait-variant = "0.1.2"

[dev-dependencies]

anyhow = "1.0.95"
criterion = { version = "0.5.1" }
# NOTE: Match version in "dependencies"
digest = "0.10.7"
serde_test = "1.0.176"
# Need "rt" and "fs" additionally for tests.
tokio = { version = "1.36.0", features = [
    "io-util",
    "fs",
    "rt",
    "rt-multi-thread",
] }
tokio-test = "0.4.3"
# Used in doctests
walkdir = "2.5.0"

[features]

# By default, you get:
#
# - The 'rustcrypto' provider.
# - Automatic inference of filetypes for embedding.
default = ["provider-rustcrypto"]

# Enable using RustCrypto as a cryptography provider.
provider-rustcrypto = ["dep:sha2"]

# Enable using BoringSLL as a cryptography provider.
provider-boringssl = ["dep:boring"]

# Enable using OpenSSL as a cryptography provider.
provider-openssl = ["dep:openssl"]

# Support automatic filetype inference for embedding.
infer-filetypes = ["dep:bindet", "dep:hyperpolyglot"]

# Support serialization and deserialization with Serde.
serde = ["dep:serde"]

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
