[package]
name = "xtask"
description = "Helper tasks for the omnibor project workspace"
version = "0.1.0"
publish = false
readme = "README.md"

homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.80"
cargo_metadata = "0.18.1"
clap = "4.5.1"
env_logger = "0.11.2"
log = "0.4.20"
pathbuf = "1.0.0"
which = "6.0.0"
xshell = "0.2.5"
